# lc-14

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
data/datasets/: README.md
data/datasets/aircraft/: CITATION.md  DATASET.md
data/datasets/tornado/: CITATION.md  DATASET.md
notebooks/: evaluation.ipynb  munoz_tester.ipynb
services/: README.md
services/jupyter/: Dockerfile  README.md  pyproject.toml
services/minio/: Dockerfile  README.md
services/mlflow/: Dockerfile  README.md
services/nginx/: README.md  nginx.conf
src/models/baseline/: cnn.py  linear.py  mlp.py
src/utilities/aircraft/plotting/: draw_bounding_boxes.py
src/utilities/data/: aircraft_dataloader.py  aircraft_dataset.py
src/utilities/plotting/: draw_bounding_boxes.py
