[tool.poetry]
name = "launch-complex-14"
version = "0.1.0"
description = "A starting point for data science captone projects"
authors = ["Christopher Jellen"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "*"
mlflow = "*"
scikit-learn = "*"
Pillow = "*"
tqdm = "*"
torch = ">=2.2.1"
torchvision = "*"
matplotlib = "*"
opencv-python = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"